# bookstore

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_factories.py  test_models.py  test_serializers.py  test_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_category/: test_factories.py  test_models.py  test_serializers.py  test_viewset.py
product/tests/test_product/: test_factories.py  test_models.py  test_serializers.py  test_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
